--- a/src/Components/StepComponent/StepComponent.less
+++ b/src/Components/StepComponent/StepComponent.less
@@ -16,6 +16,8 @@
     right: 0;
     height: 50px;
     border: 2px solid black;
+    padding: 10px;
+    box-sizing: content-box;
     display: flex;
     justify-content: center;
     align-items: center;
