--- a/src/Components/StepComponent/StepComponent.less
+++ b/src/Components/StepComponent/StepComponent.less
@@ -21,7 +21,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background: grey;
     color: yellow;
+    font-weight: bold;
+    font-size: 17px;
+    letter-spacing: 1px;
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
   }
 }
