Add transition effect between views

--- a/src/App/main.less
+++ b/src/App/main.less
@@ -5,4 +5,14 @@
     flex-grow: 1;
     display: flex;
   }
+
+  .fade-enter-active {
+    transition: opacity 100ms 100ms;
+  }
+  .fade-leave-active {
+    transition: opacity 100ms;
+  }
+  .fade-enter, .fade-leave-to {
+    opacity: 0;
+  }
 }
