--- a/src/App/index.pug
+++ b/src/App/index.pug
@@ -24,4 +24,5 @@ html(lang="en" ng-app)
 						span.nav-text Stories
 
 			// APP CONTENT
-			router-view#app-content
+			transition(name="fade")
+				router-view#app-content
