--- a/src/App/index.pug
+++ b/src/App/index.pug
@@ -7,21 +7,13 @@ html(lang="en" ng-app)
 		title Histories
 
 	body
-		// MAIN CONTAINER
-		.main-container#app
-
-			// Need .alert class to be displayed
-			.alert-app-level
-
+		// APP CONTAINER
+		#app
+			
 			// HEADER
 			header.header.header-1
-				.branding
-					router-link.nav-link(to="/home")
-						clr-icon(shape="home")
-						span.title Histories
-				.header-nav
-					router-link.nav-link(to="/stories")
-						span.nav-text Stories
+				router-link(to="/home") Histories
+				router-link(to="/stories") Stories
 
 			// APP CONTENT
 			transition(name="fade")
