--- a/src/App/main.less
+++ b/src/App/main.less
@@ -1,18 +1,45 @@
-#app {
-  display: flex;
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
 
-  #app-content {
-    flex-grow: 1;
+  #app {
+    width: 100%;
+    height: 100%;
     display: flex;
-  }
+    flex-direction: column;
 
-  .fade-enter-active {
-    transition: opacity 100ms 100ms;
-  }
-  .fade-leave-active {
-    transition: opacity 100ms;
-  }
-  .fade-enter, .fade-leave-to {
-    opacity: 0;
+    header {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      box-sizing: border-box;
+      flex-basis: 70px;
+      width: 100%;
+      background: black;
+
+      a {
+        margin: 0 10px;
+        color: white;
+        font-weight: bold;
+      }
+    }
+
+    #app-content {
+      flex-grow: 1;
+      flex-basis: 0;
+      display: flex;
+      overflow: hidden;
+    }
+
+    .fade-enter-active {
+      transition: opacity 100ms 100ms;
+    }
+    .fade-leave-active {
+      transition: opacity 100ms;
+    }
+    .fade-enter, .fade-leave-to {
+      opacity: 0;
+    }
   }
 }
