--- a/src/Components/StepComponent/StepComponent.pug
+++ b/src/Components/StepComponent/StepComponent.pug
@@ -3,4 +3,4 @@
     img(v-bind:src="imagePath")
   .step-text-container
     step-text.step-text(v-bind:config="config" v-on:answer-update="onAnswerUpdate")
-    .step-valid(v-if="config.type > 0" v-on:click="validAnswer()") OK
+    .step-valid(v-if="config.type > 0") OK
