--- a/src/Views/HomeView/HomeView.pug
+++ b/src/Views/HomeView/HomeView.pug
@@ -1,1 +1,8 @@
-.content {{message}}
+#view-content
+  #home-content
+    | Histories is a simple application to learn english.<br><br>
+    | Go to 'Stories' and select the story you want to see. You can turn the pages with the right (-->)
+    | and left (<--) arrows. <br><br>
+    | But beware ! some pages contains traps !
+    | Some time you'll need to choose between a set of words,
+    | and some other times you'll need to correct a spelling mistake.
