--- a/src/Views/StoryView/StoryView.pug
+++ b/src/Views/StoryView/StoryView.pug
@@ -1,4 +1,4 @@
-#story-container
+#view-content
   #steps-container(@keyup.native.enter='nextStep')
     story-step(
       v-for="(step, index) of story.steps" v-bind:key="story.id"
