--- a/src/App/main.less
+++ b/src/App/main.less
@@ -17,6 +17,7 @@ body {
       flex-basis: 70px;
       width: 100%;
       background: black;
+      border-bottom: 1px solid white;
 
       a {
         margin: 0 10px;
@@ -29,6 +30,7 @@ body {
       flex-grow: 1;
       flex-basis: 0;
       display: flex;
+      flex-direction: column;
       overflow: hidden;
     }
 
