--- a/src/App/main.less
+++ b/src/App/main.less
@@ -19,10 +19,16 @@ body {
       background: black;
       border-bottom: 1px solid white;
 
-      a {
+      .header-link {
         margin: 0 10px;
         color: white;
         font-weight: bold;
+      }
+
+      #points-counteur {
+        color: yellow;
+        flex-grow: 1;
+        text-align: right;
       }
     }
 
