Add end of story screen

--- a/src/Views/StoryView/StoryView.less
+++ b/src/Views/StoryView/StoryView.less
@@ -4,3 +4,10 @@
   flex-grow: 1;
   background: black;
 }
+
+#end-of-story {
+  color: white;
+  text-align: center;
+  margin: 40%;
+  font-size: 30px;
+}
