Add story creation

--- a/src/App/index.pug
+++ b/src/App/index.pug
@@ -15,6 +15,7 @@ html(lang="en" ng-app)
 				#header-links
 					router-link.header-link(to="/home") Histories
 					router-link.header-link(to="/stories") Stories
+					router-link.header-link(to="/create") Creation
 				#points-counteur {{counter.pointsCount}} Points
 
 			// APP CONTENT
