--- a/src/Views/StoryView/StoryView.pug
+++ b/src/Views/StoryView/StoryView.pug
@@ -5,4 +5,5 @@
       v-show="index == currentStepIndex"
       v-bind:config='step'
       v-on:answer-update='onAnswerUpdate'
+      v-bind:needHelp="needHelp"
     )
